applications/longhorn/templates/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-frontend
spec:
  parentRefs:
    - name: traefik-gateway
      sectionName: websecure
      namespace: gateway

  hostnames:
    - storage.wieman.cloud
    
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: longhorn-frontend
          namespace: longhorn-system
          port: 80
